--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"build": "next build",
 		"start": "next start",
 		"build:server": "tsc",
-		"server": "npm run build:server && node dist/server.js",
-		"lint": "next lint"
+		"server": "node dist/server.js",
+		"lint": "next lint",
+		"postinstall": "npm run build:server"
 	},
 	"dependencies": {
 		"@types/simple-peer": "^9.11.8",
@@ -17,8 +18,7 @@
 		"react-dom": "^19.0.0",
 		"simple-peer": "^9.11.1",
 		"socket.io": "^4.8.1",
-		"socket.io-client": "^4.8.1",
-		"ts-node": "^10.9.1"
+		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -29,6 +29,7 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.3.1",
 		"tailwindcss": "^4",
-		"typescript": "^5"
+		"typescript": "^5",
+		"ts-node": "^10.9.1"
 	}
 }
