--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"build:server": "tsc",
-		"server": "node dist/server.js",
-		"lint": "next lint",
-		"postinstall": "npm run build:server"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@types/simple-peer": "^9.11.8",
@@ -17,7 +14,6 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"simple-peer": "^9.11.1",
-		"socket.io": "^4.8.1",
 		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
@@ -29,7 +25,6 @@
 		"eslint": "^9",
 		"eslint-config-next": "15.3.1",
 		"tailwindcss": "^4",
-		"typescript": "^5",
-		"ts-node": "^10.9.1"
+		"typescript": "^5"
 	}
 }
